Adding events to dates

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
     "ember-cli-inject-live-reload": "^1.4.0",
     "ember-cli-jshint": "^1.0.0",
+    "ember-cli-less": "^1.5.3",
     "ember-cli-mirage": "0.3.0-beta.5",
     "ember-cli-qunit": "^1.4.0",
     "ember-cli-release": "0.2.8",
@@ -37,10 +38,9 @@
     "ember-data": "^2.5.0",
     "ember-export-application-global": "^1.0.5",
     "ember-load-initializers": "^0.5.1",
+    "ember-promise-helpers": "1.0.2",
     "ember-resolver": "^2.0.3",
     "loader.js": "^4.0.1"
   },
-  "dependencies": {
-
-  }
+  "dependencies": {}
 }
