--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "ember-resolver": "^2.0.3",
     "eonasdan-bootstrap-datetimepicker": "4.17.47",
     "jquery": "3.1.1",
+    "liquid-fire": "0.27.1",
     "loader.js": "^4.0.1",
     "moment": "2.17.1",
     "moment-timezone": "0.4.1"
